# jetson_docker

./: Makefile  README.md  docker-compose.yml  macvlan_setup.sh
video_server/: Dockerfile  requirements.txt  setup.sh
video_server/ridgerun_plugins/: setup_ridgerun_docker.sh
video_server/ridgerun_plugins/gst-metadata/: Config  Makefile  README.md
video_server/ridgerun_plugins/gst-metadata/extras/: README
video_server/ridgerun_plugins/gst-metadata/src/: .gitignore  AUTHORS  COPYING  Makefile.am  README  configure.ac
video_server/ridgerun_plugins/gst-metadata/src/src/: Makefile.am  gstmeta.c  gstmetasink.c  gstmetasink.h  gstmetasrc.c  gstmetasrc.h  gstmisbparser.c  gstmisbparser.h  klv.c  klv.h  klvutils.c  klvutils.h  lds.c  lds.h  misbparser.c  misbparser.h  misbstd.h  st0601dictionary.c  st0601dictionary.h  st0604dictionary.c  st0604dictionary.h
video_server/ridgerun_plugins/gst-plugins-bad/: Makefile  Makefile.in  _stdint.h  aclocal.m4  config.h  config.h.in  config.status  configure  libtool
video_server/ridgerun_plugins/gst-plugins-bad/autom4te.cache/: output.1  (+3 more)
video_server/ridgerun_plugins/gst-plugins-base/: Makefile  Makefile.in  _stdint.h  aclocal.m4  autoregen.sh  config.h  config.h.in~  config.status  configure  libtool
video_server/ridgerun_plugins/gst-rtsp-sink/: README.md
video_server/ridgerun_plugins/gstreamer/: Makefile  Makefile.in  _stdint.h  aclocal.m4  config.h  config.h.in  config.status  configure  libtool
video_server/server/: bus_call.py  setup_logging.py  simulated_rtsp.py  utils.py
video_server/server/logs/: readme.txt
(+3431 files in other folders)
